@@ -1,0 +1,24 @@
+DECL|class|QOffscreenSurfacePrivate
+DECL|function|QOffscreenSurface
+DECL|function|QOffscreenSurfacePrivate
+DECL|function|create
+DECL|function|destroy
+DECL|function|format
+DECL|function|handle
+DECL|function|isValid
+DECL|function|requestedFormat
+DECL|function|screen
+DECL|function|screenDestroyed
+DECL|function|setFormat
+DECL|function|setScreen
+DECL|function|size
+DECL|function|surfaceHandle
+DECL|function|surfaceType
+DECL|function|~QOffscreenSurface
+DECL|function|~QOffscreenSurfacePrivate
+DECL|member|offscreenWindow
+DECL|member|platformOffscreenSurface
+DECL|member|requestedFormat
+DECL|member|screen
+DECL|member|size
+DECL|member|surfaceType
