@@ -1,0 +1,7 @@
+DECL|class|QPlatformOffscreenSurfacePrivate
+DECL|function|QPlatformOffscreenSurface
+DECL|function|format
+DECL|function|isValid
+DECL|function|offscreenSurface
+DECL|function|screen
+DECL|function|~QPlatformOffscreenSurface
