@@ -1,0 +1,2 @@
+DECL|function|QEGLPbuffer
+DECL|function|~QEGLPbuffer
