@@ -4,20 +4,28 @@ DECL|function|SharedResource
 DECL|function|SharedResource
 DECL|function|SharedResourceTracker
 DECL|function|aboutToBeDestroyed
+DECL|function|common_data
+DECL|function|createSurface
 DECL|function|fboHandleNulledAfterContextDestroyed
 DECL|function|fboRendering
+DECL|function|fboRendering_data
 DECL|function|fboSimpleRendering
+DECL|function|fboSimpleRendering_data
 DECL|function|freeResource
 DECL|function|fuzzyCompareImages
 DECL|function|fuzzyComparePixels
 DECL|function|invalidateResource
 DECL|function|multiGroupSharedResourceCleanup
 DECL|function|multiGroupSharedResourceCleanupCustom
+DECL|function|multiGroupSharedResourceCleanupCustom_data
+DECL|function|multiGroupSharedResourceCleanup_data
 DECL|function|openGLPaintDevice
+DECL|function|openGLPaintDevice_data
 DECL|function|qt_opengl_check_test_pattern
 DECL|function|qt_opengl_draw_test_pattern
 DECL|function|reset
 DECL|function|sharedResourceCleanup
+DECL|function|sharedResourceCleanup_data
 DECL|function|~SharedResource
 DECL|macro|QFUZZY_COMPARE_IMAGES
 DECL|macro|QFUZZY_COMPARE_PIXELS
